Fixed issue where some text wraps in the cards and makes the card's length not equal to the others.

--- a/index.css
+++ b/index.css
@@ -18,3 +18,7 @@
 .dark-mode-pricing-card .card-header {
 	background-color: #555;
 }
+
+#pricing li > p {
+	text-wrap: pretty;
+}
